removed obsolete reference to versioned_label_path
this has long been removed from the core[1] - not sure why it didn't
throw errors until now

[1]
https://github.com/innoq/iqvoc/commit/ea8230947af5dfbeb8b017bdf7831720f4eb453a

--- a/app/views/partials/inflectional/_base.html.erb
+++ b/app/views/partials/inflectional/_base.html.erb
@@ -11,11 +11,7 @@
     <p><%= t("txt.views.labels.inflectionals_used_in") %></p>
     <ul>
       <% inflectionals_labels.each do |inf| %>
-        <% if inf.published? %>
-          <li><%= link_to inf.value, label_path(:id => inf) %></li>
-        <% else %>
-          <li><%= link_to inf.value, versioned_label_path(:id => inf) %></li>
-        <% end %>
+        <li><%= link_to inf.value, label_path(:published => inf.published? ? nil : 0, :id => inf) %></li>
       <% end %>
     </ul>
   <% end %>
