--- a/app/views/partials/inflectional/_base.html.erb
+++ b/app/views/partials/inflectional/_base.html.erb
@@ -2,13 +2,7 @@
   <h2><%= t("txt.views.labels.inflectionals") %></h2>
   <% labels_inflectionals_values = label.send(klass.name.to_relation_name).map(&:value) %>
 
-  <% if labels_inflectionals_values.any? %>
-    <ul class="list-inline">
-      <% labels_inflectionals_values.each do |inf| %>
-        <li><%= inf %></li>
-      <% end %>
-    </ul>
-  <% end %>
+  <%= labels_inflectionals_values.join(', ') %>
 
   <%
     all_inflectionals = Inflectional::Base.where(:value => labels_inflectionals_values).all
@@ -18,10 +12,6 @@
 
   <% if inflectionals_labels.present? %>
     <p><%= t("txt.views.labels.inflectionals_used_in") %></p>
-    <ul class="list-inline">
-      <% inflectionals_labels.each do |inf| %>
-        <li><%= link_to inf.value, label_path(:published => inf.published? ? nil : 0, :id => inf) %></li>
-      <% end %>
-    </ul>
+    <%= inflectionals_labels.map { |inf| link_to inf.value, label_path(:published => inf.published? ? nil : 0, :id => inf) }.join(', ').html_safe %>
   <% end %>
 </div>
