autocorrect and autocapitalize is now deactivated for inflectional text area

--- a/app/views/partials/inflectional/_edit_base.html.erb
+++ b/app/views/partials/inflectional/_edit_base.html.erb
@@ -3,6 +3,8 @@
     value: label.send(klass.name.to_relation_name).map(&:value).join("\n"),
     rows: 10,
     cols: 80,
+    autocorrect: 'off',
+    autocapitalize: 'off',
     data: {
       generated_inflectionals: label.candidates.to_json
     }
