--- a/app/views/partials/inflectional/_search_result.html.erb
+++ b/app/views/partials/inflectional/_search_result.html.erb
@@ -6,7 +6,7 @@
       <%= t("txt.views.search_results.no_results") %>
     <% else %>
       <% result[:result].group_by{|i| i.label}.each do |key, value| %>
-        <% concept = key.concepts_for_labeling_class(Labeling::SKOSXL::PrefLabel).try(:first) %>
+        <% concept = key.concepts_for_labeling_class(Labeling::Skosxl::PrefLabel).try(:first) %>
         <% concept_path = concept ? concept_path(:id => concept.origin) : '' %>
         <%= link_to(key.value, label_path(:id => key), :data => { 'pref-label-for' => concept_path }) %> (<%= value.map(&:value).join(", ") %>)<br>
       <% end %>
